--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
         </div>
 
         <div class="flex-header">
-            <div class="slider-button" style="left: 0;" onclick="changeSlide(-1)">
+            <div class="slider-button" style="left: 0;" onclick="changeSlide(this, -1)">
                 <</div>
-                    <div id="slider-element"></div>
-                    <div class="slider-button" style="right: 0;" onclick="changeSlide(1)">></div>
+                    <div id="slider-element">
+                    </div>
+                    <div class="slider-button" style="right: 0;" onclick="changeSlide(this, 1)">></div>
             </div>
 
             <div class="flex-container2">
@@ -47,6 +48,9 @@
                 <div class="products">Hygiene</div>
                 <div class="products">Katzenspielzeug</div>
                 <div class="products">Kratzmöglichkeiten</div>
+            </div>
+
+            <div id="products-container">
             </div>
         </div>
 
