--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
         </div>
 
         <div class="flex-header">
-            <div class="slider-button" style="left: 0;" onclick="changeSlide(this, -1)">
+            <div class="slider-button" style="left: 0;" onclick="changeSlideLoop(-1);stopSlider()">
                 <</div>
                     <div id="slider-element">
                     </div>
-                    <div class="slider-button" style="right: 0;" onclick="changeSlide(this, 1)">></div>
+                    <div class="slider-button" style="right: 0;" onclick="changeSlideLoop(1);stopSlider()">></div>
             </div>
 
             <div class="flex-container2">
