added category selection

--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
             </div>
 
             <div class="flex-container2">
-                <div class="products">Marken</div>
-                <div class="products">Trockenfutter</div>
-                <div class="products">Nassfutter</div>
-                <div class="products">Snacks</div>
-                <div class="products">Hygiene</div>
-                <div class="products">Katzenspielzeug</div>
-                <div class="products">Kratzmöglichkeiten</div>
+                <div class="products" onclick="loadProducts('brands')">Marken</div>
+                <div class="products" onclick="loadProducts('dryfood')">Trockenfutter</div>
+                <div class="products" onclick="loadProducts('wetfood')">Nassfutter</div>
+                <div class="products" onclick="loadProducts('snacks')">Snacks</div>
+                <div class="products" onclick="loadProducts('hygene')">Hygiene</div>
+                <div class="products" onclick="loadProducts('toys')">Katzenspielzeug</div>
+                <div class="products" onclick="loadProducts('claws')">Kratzmöglichkeiten</div>
             </div>
 
             <div id="products-container">
